[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Assets/Sprites/Gui/grey_box.png" type="Texture" id=1]
[ext_resource path="res://src/Assets/Sprites/Gui/blue_boxCross.png" type="Texture" id=2]
[ext_resource path="res://src/Gui/Options/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Assets/Fonts/KennyFuturFont20.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/Gui/Options/Graphics.gd" type="Script" id=5]






[node name="Graphics" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Options" parent="." instance=ExtResource( 3 )]

[node name="MainContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 50.0
margin_bottom = -50.0
custom_constants/margin_top = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
margin_top = 50.0
margin_right = 1009.0
margin_bottom = 500.0
custom_constants/separation = 20

[node name="FullscreenContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
margin_right = 1009.0
margin_bottom = 44.0

[node name="Fullscreen" type="Label" parent="MainContainer/VBoxContainer/FullscreenContainer"]
margin_top = 10.0
margin_right = 182.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 4 )
text = "Fullscreen :"

[node name="FullscreenCheck" type="CheckBox" parent="MainContainer/VBoxContainer/FullscreenContainer"]
margin_left = 186.0
margin_right = 232.0
margin_bottom = 44.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 1 )
custom_constants/check_vadjust = 0

[node name="BorderlessContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 1009.0
margin_bottom = 108.0

[node name="Borderless" type="Label" parent="MainContainer/VBoxContainer/BorderlessContainer"]
margin_top = 10.0
margin_right = 182.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 4 )
text = "Borderless :"

[node name="BorderlessCheck" type="CheckBox" parent="MainContainer/VBoxContainer/BorderlessContainer"]
margin_left = 186.0
margin_right = 232.0
margin_bottom = 44.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 1 )
custom_constants/check_vadjust = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 1009.0
margin_bottom = 169.0

[node name="Resolution" type="Label" parent="MainContainer/VBoxContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 172.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Resolution :"

[node name="OptionButton" type="OptionButton" parent="MainContainer/VBoxContainer/HBoxContainer"]
margin_left = 176.0
margin_right = 205.0
margin_bottom = 41.0
